--- a/src/components/space.css
+++ b/src/components/space.css
@@ -1,82 +1,58 @@
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    
-}
-.navbar ul{
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    align-content: end;
-}
-.container{
-    padding: 15px;
-    background-color: antiquewhite;
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100&family=Josefin+Sans:wght@500&family=Zeyada&display=swap');
 
-}    
 
 .container{
-   padding:20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 50%;
+    margin-left: 200px;
+    padding: 20px;
+    gap: 50px;
+}
 
+.intro {
+  color: white;
+  margin: 150px 40px 0px 60px;
+  font-family: 'Heebo';
+}
+
+.toptext{
+    font-family: 'Heebo', sans-serif;
+    color: #A3A7C0;
+    font-family:'Heebo';
+}
+
+.text2{
+    font-size: 70px;
+    font-family: 'Heebo', sans-serif;
+    letter-spacing: 12px;
+    padding-left: 4px;
+    text-transform: uppercase;
+}
+
+.text3{
+    font-size: 12px;
+    color: #a5addb;
+    margin-top: 8px;
+}
+
+.rightSide{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
-.image{
-    object-fit: fill; 
-}
-.Explore{
-    background-color: white;
-    background-size: 100px;
-    width: 100px;
-    height:100px ;
+
+.circle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 50%;
-    align-items: left;
-}.gridContainer {
-    display: grid;
-    grid-template-columns: 35% 65%;
-  }
-  
-  .intro {
-    color: white;
-    margin: 150px 40px 0px 60px;
-    font-family: 'Heebo';
-  }
-  
-  .text1{
-      font-family: 'Heebo', sans-serif;
-      color: #A3A7C0;
-      font-family:'Heebo';
-  }
-  
-  .text2{
-      font-size: 70px;
-      font-family: 'Heebo', sans-serif;
-      letter-spacing: 12px;
-      padding-left: 4px;
-      text-transform: uppercase;
-  }
-  
-  .text3{
-      font-size: 12px;
-      color: #A3A7C0;
-      margin-top: 8px;
-  }
-  
-  .exploreDiv{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  
-  }
-  
-  .explore{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 50%;
-      font-size: 22px;
-      color: #545454;
-      background-color: #fff;
-      width: 190px;
-      height: 190px;
-      margin-top: 120px;
-  }
+    font-size: 22px;
+    color: #533b3b;
+    background-color: #fff;
+    width: 120px;
+    height: 120px;
+    margin-top: 120px;
+}
