--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,11 @@
-
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #5c84d5;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #18b2dd;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0px);
-  }
-  to {
-    transform: rotate(360px);
-  }
+body{
+  height: 100vh;
+  width: 100%;
+  background-image: url('C:\Users\Admin\Desktop\Jitu\spacehomepage\public\space-tourism-website-main\starter-code\assets\home\background-home-desktop.jpg');
 }
