--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,20 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100&family=Josefin+Sans:wght@500&family=Zeyada&display=swap');
 
-
 .container{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 50%;
-    margin-left: 200px;
-    padding: 20px;
-    gap: 50px;
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   
 }
-
-.intro {
+.leftSide {
   color: white;
   margin: 150px 40px 0px 60px;
   font-family: 'Heebo';
+  
 }
 
 .toptext{
@@ -33,14 +28,13 @@
 
 .text3{
     font-size: 12px;
-    color: #a5addb;
+    color: #A3A7C0;
     margin-top: 8px;
 }
 
 .rightSide{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-left: 200px;
 
 }
 
@@ -50,9 +44,9 @@
     justify-content: center;
     border-radius: 50%;
     font-size: 22px;
-    color: #533b3b;
+    color: #545454;
     background-color: #fff;
-    width: 120px;
-    height: 120px;
+    width: 190px;
+    height: 190px;
     margin-top: 120px;
 }
